--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 
-<link href="https://joecodes.blog/index.xml" rel="alternate" type="application/rss+xml" title="HugoKme" />
+<link href="https://joecodes.blog/index.xml" rel="alternate" type="application/rss+xml" title="JoeCodes" />
 
 <link rel="stylesheet" href="/css/style.css"/><link rel='stylesheet' href='https://joecodes.blog/css/custom.css'><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -26,7 +26,7 @@
     <nav id="nav-main" class="nav">
       <div id="nav-name" class="nav-left">
         <a id="nav-anchor" class="nav-item" href="https://joecodes.blog">
-          <h1 id="nav-heading" class="title is-4">HugoKme</h1>
+          <h1 id="nav-heading" class="title is-4">Joe Codes.blog</h1>
         </a>
       </div>
       <div class="nav-right">
