adding new post

--- a/404.html
+++ b/404.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-<title>404 Page not found | HugoKme</title>
+<title>404 Page not found | JoeCodes</title>
 
 
 
-<link href="https://joecodes.blog/index.xml" rel="alternate" type="application/rss+xml" title="HugoKme" />
+<link href="https://joecodes.blog/index.xml" rel="alternate" type="application/rss+xml" title="JoeCodes" />
 
 <link rel="stylesheet" href="/css/style.css"/><link rel='stylesheet' href='https://joecodes.blog/css/custom.css'><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
